@@ -2,14 +2,20 @@
 
 ## HO DUC HAI - C0820K1
 
+### Student Manager App -- Offline Version
 
-### Student Manager App
+A Java-Fx application for managing students.
+- Easy and Simple to use
+- Adding/Sorting/FindingByID/PieChart
 
-.
-
-
-## 
-
-
+## Run/Debug Configurations
+```
+--module-path
+.../javafx-sdk-11.0.2/lib
+--add-modules
+javafx.controls,javafx.fxml
+--add-exports
+javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
+```
 ##
 
